<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <Button
            android:id="@+id/cashTransaction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cashTransaction"
            android:background="#0472f9" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="#ffffff" />


    <Button
            android:id="@+id/cardTransaction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardTransaction"
            android:background="#0472f9" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="#ffffff" />


    <Button
        android:id="@+id/transactionBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/transactionBack"
            android:background="#0472f9" />
    </LinearLayout>

