<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/empty_view_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_white_box"/>

        <TextView
            android:id="@+id/empty_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/empty_list_hint"
            android:layout_marginLeft="96dp"
            android:layout_marginRight="96dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scanButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_yellow"
            android:text="@string/scan" />

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/hint_search" />
    </LinearLayout>

    <ListView
        android:id="@+id/productListView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1" >
    </ListView>



</LinearLayout>