<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
>

	<ScrollView
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
    >
		<LinearLayout
		    android:layout_width="match_parent"
			android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
		>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/color_44"
                    android:textSize="24dp"
                    android:text="@string/setting_t1000device_title"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:textColor="@color/color_44"
                android:textSize="@dimen/textsize_general"
                android:text="@string/t1000_ipaddress"
                android:layout_marginTop="40dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/val_ipone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:numeric="integer"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:text=""
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:text="."
                    />

                <EditText
                    android:id="@+id/val_iptwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:inputType="phone"
                    android:numeric="integer"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:text=""
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:text="."
                    />

                <EditText
                    android:id="@+id/val_ipthree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:inputType="phone"
                    android:numeric="integer"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:text=""
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:text="."
                    />

                <EditText
                    android:id="@+id/val_ipfour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:inputType="phone"
                    android:numeric="integer"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:text=""
                    />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:textColor="@color/color_44"
                android:textSize="@dimen/textsize_general"
                android:text="@string/t1000_port_wrange"
                android:layout_marginTop="40dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/val_port"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|bottom"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:numeric="integer"
                    android:maxLines="1"
                    android:maxLength="5"
                    android:text=""
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:text="@string/connection_timeout_second"
                    />
                <TextView
                    android:id="@+id/conf_connectiontimeout_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:text=""
                    />

                <SeekBar
                    android:id="@+id/conf_connectiontimeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="90"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="bottom"
                >
                <Button
                    android:id="@+id/register_save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/blue_login_roundcorner"
                    android:textColor="@color/color_44"
                    android:textSize="@dimen/textsize_general"
                    android:text="@string/btn_save"
                    android:onClick="onProcess"
                    />
            </LinearLayout>

        </LinearLayout>
		
	</ScrollView>

</LinearLayout>
	    
